[gd_scene load_steps=4 format=3 uid="uid://m5ptyc07a840"]

[ext_resource type="Script" uid="uid://dxiihft1cp11e" path="res://scripts/GameOver.gd" id="1_6bcno"]
[ext_resource type="AudioStream" uid="uid://k27qjquy1je5" path="res://Audio/music/Game_Over_Retro.ogg" id="2_qae0b"]

[sub_resource type="LabelSettings" id="LabelSettings_6bcno"]
font_size = 64
font_color = Color(1, 0, 0, 1)

[node name="GameOver" type="CanvasLayer"]
layer = 100
script = ExtResource("1_6bcno")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="ContainerNormal" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerNormal"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LabelTitulo" type="Label" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_6bcno")

[node name="HSeparator" type="HSeparator" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2

[node name="BtnCarregar" type="Button" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2
text = "Carregar Ultimo Save"

[node name="BtnTentar" type="Button" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2
text = "Reiniciar Fase"

[node name="BtnHub" type="Button" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2
text = "Retornar ao Setor Defeituoso"

[node name="BtnMenu" type="Button" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2
text = "Voltar ao Menu Principal"

[node name="BtnSair" type="Button" parent="ContainerNormal/VBoxContainer"]
layout_mode = 2
text = "Sair do Jogo"

[node name="PanelArcade" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelArcade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LblTitulo" type="Label" parent="PanelArcade/VBoxContainer"]
layout_mode = 2
text = "FIM DA RUN"

[node name="LblScore" type="Label" parent="PanelArcade/VBoxContainer"]
layout_mode = 2
text = "PONTUAÇÃO: "

[node name="HSeparator" type="HSeparator" parent="PanelArcade/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelArcade/VBoxContainer"]
layout_mode = 2

[node name="InputName" type="LineEdit" parent="PanelArcade/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "AAA"
max_length = 3

[node name="BtnSubmit" type="Button" parent="PanelArcade/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SALVAR"

[node name="HSeparator2" type="HSeparator" parent="PanelArcade/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelArcade/VBoxContainer"]
layout_mode = 2
text = "TOP 10"

[node name="VBoxListaLeaderboard" type="VBoxContainer" parent="PanelArcade/VBoxContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="PanelArcade/VBoxContainer"]
layout_mode = 2

[node name="BtnVoltarMenu" type="Button" parent="PanelArcade/VBoxContainer"]
layout_mode = 2
text = "VOLTAR AO MENU"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_qae0b")
